# QuantumControlWithRL

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
GateCalibration/: GateCalibrationClasses.py  batched_ppo_train.py  environment.py  ppo_train.py  quantum_environment.py
GateCalibration/runs/Gate Calibration__ppo_train__1__1682193592/: events.out.tfevents.1682193602.Aniken.65175.0
GateCalibration/runs/Gate Calibration__ppo_train__1__1682193680/: events.out.tfevents.1682193692.Aniken.65276.0
GateCalibration/runs/Gate Calibration__ppo_train__1__1682193736/: events.out.tfevents.1682193747.Aniken.65364.0
GateCalibration/runs/Gate Calibration__ppo_train__1__1682193811/: events.out.tfevents.1682193821.Aniken.65463.0
GateCalibration/wandb/: latest-run
GateCalibration/wandb/run-20230423_175759-83l9m0dr/: run-83l9m0dr.wandb
QuantumControl/: algo_tuner.py  batched_ppo.py  batched_ppo2.py  cleanrl_hpopt.db  direct_ppo.py  hyperparam_tuner.py  ppo.py  ppo_continuous_action.py  ppo_jax.py  quantum_classes.py  rpo.py  sac.py  taster.py  td3.py  td3_jax.py  tester.py  tuner_ppo.py
QuantumControl/quantum_envs/: __init__.py
QuantumControl/quantum_envs/envs/: __init__.py
QuantumControl/wandb/: latest-run
QuantumControl/wandb/run-20230425_124355-4gbo8ufs/: run-4gbo8ufs.wandb
wandb/: latest-run
wandb/run-20230426_193534-x9lkwzh6/: run-x9lkwzh6.wandb
wandb/run-20230426_193650-qlxxwmqc/: run-qlxxwmqc.wandb
wandb/run-20230426_193817-fhod0u7a/: run-fhod0u7a.wandb
wandb/run-20230426_193957-qn51xw73/: run-qn51xw73.wandb
(+184 files in other folders)
