[tool.poetry]
name = "quantumcontrolwithrl"
version = "0.1.0"
description = ""
authors = ["AnikenC <quantac47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.11"
qiskit = "^0.42.1"
qiskit-ibm-runtime = "^0.9.3"
tensorflow = "^2.12.0"
tensorflow-probability = "^0.19.0"
optuna = "3.1.1"
dill = "^0.3.6"
glfw = "^2.5.9"
mujoco = "^2.3.4"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
